<resources>

    <string name="app_name">expensiv</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Expensiv</string>
    <string name="add">Add</string>
    <string name="list">…</string>
    <string name="addExpense">Add Expense</string>
    <string name="addIncome">+</string>
    <string name="prev">Previous Month</string>
    <string name="next">Next Month</string>
    <string name="addBySms"> SMS Alerts</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="category_wise">Categories</string>
    <string name="read_sms">Read SMS</string>
    <string name="backup">Backup</string>
    <string name="send_sms">SMS Banking</string>
    <string name="title_activity_add_new_expense">AddNewExpense</string>
    <string name="title_activity_edit_expense">Edit Expense</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="cost">Cost</string>
    <string name="category">Category</string>
    <string name="sub_category">Sub-category</string>
    <string name="date_widgets_example_dateDisplay_text"> date picker inline</string>
    <string name="addMore">Add More</string>
    <string name="viewAll">View All</string>
    <string name="title_activity_category_details">Category Details</string>
    <string name="title_activity_sub_category_details">Sub-Category Details</string>
    <string name="title_activity_read_sms">ReadSms</string>
    <string name="pendingExpense">Pending Expense</string>
    <string name="service">AutoCreateService</string>

</resources>