<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical" >
    <EditText
        android:id="@+id/txt_cost"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cost" />
    <EditText
        android:id="@+id/txt_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title" />
    <EditText
        android:id="@+id/txt_date"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/date" />
    <EditText
        android:id="@+id/txt_category"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/category" />
    <EditText
        android:id="@+id/txt_sub_category"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sub_category" />
    
    <!-- <EditText
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="top"
        android:hint="@string/date" />-->
    <Button
        android:id="@+id/save"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/save"
        android:onClick="saveToDB"/>
</LinearLayout>