<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp" >

        <EditText
            android:id="@+id/txt_cost"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cost"
            android:inputType="number" />

        <EditText
            android:id="@+id/txt_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title" />

        <!--
         <EditText
        android:id="@+id/txt_date"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/date" />
        -->

        <DatePicker
            android:id="@+id/dp_expenseDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:calendarViewShown="false" />

        <!--
         <EditText
        android:id="@+id/txt_date"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/date" />
        -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/txt_category"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/category" />

            <Button
                android:id="@+id/showCategories"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="showCategoryChoices"
                android:text="@string/list" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/txt_sub_category"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/sub_category" />

            <Button
                android:id="@+id/showSubCategories"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="showSubCategoryChoices"
                android:text="@string/list" />
        </LinearLayout>

        <Spinner
            android:id="@+id/debitcredit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <!--
             <AutoCompleteTextView
            android:id="@+id/auto_category"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
        -->

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <CheckBox
                android:id="@+id/radio1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false" />

            <TextView
                android:id="@+id/PendingExpenseTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/radio1"
                android:layout_toRightOf="@+id/radio1"
                android:text="@string/pendingExpense" />

            <LinearLayout
                android:id="@+id/pending"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/radio1"
                android:orientation="horizontal"
                android:visibility="gone" >

                <Spinner
                    android:id="@+id/spinner1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/contactName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="add from contacts"
                    android:inputType="none" />

                <!--
                     <AutoCompleteTextView
                    android:id="@+id/contactName"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />
                -->
            </LinearLayout>
        </RelativeLayout>

        <!--
         <EditText
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="top"
        android:hint="@string/date" />
        -->


        <!--
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TimePicker
            android:id="@+id/timePicker"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/dateDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="4dip"
            android:text="@string/date_widgets_example_dateDisplay_text" />
    </LinearLayout>
        -->

        <Button
            android:id="@+id/save"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="saveToDB"
            android:text="@string/add" />
    </LinearLayout>

</ScrollView>