<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <!--
         <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp" >
    -->

    <RelativeLayout
        android:id="@+id/navbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal" 
        android:layout_alignParentTop="true">

        <ImageButton
            android:id="@+id/btnLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="@null"
            android:contentDescription="@string/prev"
            android:onClick="prev"
            android:paddingBottom="1dp"
            android:paddingTop="5dp"
            android:src="@drawable/arrow_left" />

        <TextView
            android:id="@+id/currentMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:paddingBottom="1dp"
            android:paddingTop="5dp"
            android:textSize="25dp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/btnRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@null"
            android:contentDescription="@string/next"
            android:onClick="next"
            android:paddingBottom="1dp"
            android:paddingTop="5dp"
            android:src="@drawable/arrow_right" />
    </RelativeLayout>

    <TextView
        android:id="@+id/totalExpense"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingTop="1dp"
        android:textSize="15dp"
        android:textStyle="bold" 
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/navbar"/>

    <ListView
        android:id="@+id/ListView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"        
        android:layout_below="@+id/totalExpense"
        android:layout_above="@+id/buttonbar"
        >
    </ListView>

    <LinearLayout
        android:id="@+id/buttonbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_office"
        android:gravity="center"
        android:orientation="horizontal" 
        android:layout_alignParentBottom="true">

        <!--
                 <Button
                android:id="@+id/buttonAddIncome"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/button_2_normal"
                android:onClick="addNewExpense"
                android:text="@string/addIncome" />
        -->


        <!--
                 <Button
                android:id="@+id/buttonAddFromSMS"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/button_2_normal"
                android:onClick="addNewExpenseBySms"
                android:text="@string/addBySms" />
        -->

        <ImageButton
            android:id="@+id/btnAddNew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:contentDescription="@string/addExpense"
            android:onClick="addNewExpenseBySms"
            android:src="@drawable/appbar_email" />

        <!--
                 <Button
                android:id="@+id/buttonAddExpense"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/button_2_normal"
                android:onClick="addNewExpense"
                android:text="@string/addExpense" />
        -->

        <ImageButton
            android:id="@+id/buttonAddExpense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@null"
            android:contentDescription="@string/addExpense"
            android:onClick="addNewExpense"
            android:src="@drawable/appbar_add" />

        <!--
                 <Button
                android:id="@+id/buttonCategoryWise"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/button_2_normal"
                android:onClick="viewCategoryWise"
                android:text="@string/category_wise" />
        -->

        <ImageButton
            android:id="@+id/buttonCategoryWise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:contentDescription="@string/addExpense"
            android:onClick="viewCategoryWise"
            android:src="@drawable/appbar_list" />
    </LinearLayout>
    <!-- </LinearLayout> -->

</RelativeLayout>